--- a/PositionIn/Search/ItemSearchResult/PositionIn.SearchEntityCell.xib
+++ b/PositionIn/Search/ItemSearchResult/PositionIn.SearchEntityCell.xib
@@ -20,7 +20,7 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oBG-80-vQ0">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oBG-80-vQ0">
                         <rect key="frame" x="8" y="14" width="28" height="28"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="28" id="fNg-U3-L5G"/>
