--- a/PositionIn/Views/Messaging/PositionIn.ChatHistoryCell.xib
+++ b/PositionIn/Views/Messaging/PositionIn.ChatHistoryCell.xib
@@ -44,7 +44,7 @@
                         <rect key="frame" x="-84" y="94" width="68" height="97"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WUO-HG-vnr" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
+                    <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="WUO-HG-vnr" customClass="AvatarView" customModule="PositionIn" customModuleProvider="target">
                         <rect key="frame" x="10" y="10" width="32" height="32"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
