remove all fb login code to base login controller

--- a/PositionIn/Login/Login.storyboard
+++ b/PositionIn/Login/Login.storyboard
@@ -73,7 +73,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="facebookPressed:" destination="JGW-l6-Shb" eventType="touchUpInside" id="omn-5l-S5L"/>
+                                                    <action selector="facebookPressed:" destination="JGW-l6-Shb" eventType="touchUpInside" id="tja-8g-Dij"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugW-zo-uTv">
@@ -252,7 +252,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="facebookPressed:" destination="zd3-fl-Vea" eventType="touchUpInside" id="P81-Bl-fJL"/>
+                                                    <action selector="facebookPressed:" destination="zd3-fl-Vea" eventType="touchUpInside" id="16X-NH-VFR"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t6o-k1-Alw">
@@ -613,7 +613,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="facebookPressed:" destination="cOZ-SQ-Q1c" eventType="touchUpInside" id="rat-H1-q3P"/>
+                                                    <action selector="facebookPressed:" destination="cOZ-SQ-Q1c" eventType="touchUpInside" id="pHx-t7-QDk"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3yP-kR-Kvh">
