--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="j5Z-eJ-Y0Z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="j5Z-eJ-Y0Z">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -260,10 +260,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fUl-gm-R24">
-                                <rect key="frame" x="0.0" y="64" width="600" height="93"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="93"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Lrk-8R-Gfe">
-                                        <rect key="frame" x="8" y="8" width="584" height="30"/>
+                                        <rect key="frame" x="8" y="8" width="520" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                     </textField>
@@ -272,28 +272,8 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                     </textField>
-                                </subviews>
-                                <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="top" constant="8" id="277-Lt-b41"/>
-                                    <constraint firstAttribute="trailing" secondItem="3P6-Ny-j89" secondAttribute="trailing" constant="8" id="4j8-VO-FLb"/>
-                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="trailing" secondItem="fUl-gm-R24" secondAttribute="trailingMargin" id="7mk-H1-5aM"/>
-                                    <constraint firstAttribute="height" constant="93" id="AO2-gE-5bz"/>
-                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="top" secondItem="Lrk-8R-Gfe" secondAttribute="bottom" constant="17" id="JwB-nz-83V"/>
-                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leadingMargin" id="L68-K8-mZG"/>
-                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leading" constant="8" id="Wtt-ki-Nke"/>
-                                    <constraint firstAttribute="bottom" secondItem="3P6-Ny-j89" secondAttribute="bottom" constant="8" id="vNT-Tx-Ibc"/>
-                                </constraints>
-                            </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="V9L-hl-OWs" customClass="TableView" customModule="PosInCore">
-                                <rect key="frame" x="0.0" y="157" width="600" height="443"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zk0-xD-ugu">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
-                                <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDk-bo-enK">
-                                        <rect key="frame" x="8" y="26" width="64" height="30"/>
+                                        <rect key="frame" x="536" y="8" width="64" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="4bH-dm-a2X"/>
                                             <constraint firstAttribute="width" constant="64" id="rmG-fT-4Pa"/>
@@ -309,16 +289,29 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="2Gp-nv-YYS"/>
-                                    <constraint firstAttribute="bottom" secondItem="qDk-bo-enK" secondAttribute="bottom" constant="8" id="CDg-1L-doC"/>
-                                    <constraint firstAttribute="height" constant="64" id="IQv-lv-7LR"/>
-                                    <constraint firstItem="qDk-bo-enK" firstAttribute="leading" secondItem="zk0-xD-ugu" secondAttribute="leading" constant="8" id="Wmj-iT-7AC"/>
+                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="top" constant="8" id="277-Lt-b41"/>
+                                    <constraint firstAttribute="trailing" secondItem="3P6-Ny-j89" secondAttribute="trailing" constant="8" id="4j8-VO-FLb"/>
+                                    <constraint firstAttribute="height" constant="93" id="AO2-gE-5bz"/>
+                                    <constraint firstAttribute="trailing" secondItem="qDk-bo-enK" secondAttribute="trailing" id="FPk-CA-rF6"/>
+                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="top" secondItem="Lrk-8R-Gfe" secondAttribute="bottom" constant="17" id="JwB-nz-83V"/>
+                                    <constraint firstItem="Lrk-8R-Gfe" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leadingMargin" id="L68-K8-mZG"/>
+                                    <constraint firstItem="qDk-bo-enK" firstAttribute="leading" secondItem="Lrk-8R-Gfe" secondAttribute="trailing" constant="8" id="NA3-qi-cSx"/>
+                                    <constraint firstItem="qDk-bo-enK" firstAttribute="top" secondItem="fUl-gm-R24" secondAttribute="top" constant="8" id="Sml-xX-jaj"/>
+                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="leading" secondItem="fUl-gm-R24" secondAttribute="leading" constant="8" id="Wtt-ki-Nke"/>
+                                    <constraint firstItem="3P6-Ny-j89" firstAttribute="top" secondItem="qDk-bo-enK" secondAttribute="bottom" constant="17" id="fqs-m4-LqR"/>
+                                    <constraint firstAttribute="bottom" secondItem="3P6-Ny-j89" secondAttribute="bottom" constant="8" id="vNT-Tx-Ibc"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="2Gp-nv-YYS"/>
-                                    </mask>
-                                </variation>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="V9L-hl-OWs" customClass="TableView" customModule="PosInCore">
+                                <rect key="frame" x="0.0" y="113" width="600" height="487"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zk0-xD-ugu">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
+                                <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="IQv-lv-7LR"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
