--- a/PositionIn/MainMenu/PositionIn.MainMenuBadgeCell.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuBadgeCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -29,36 +30,37 @@
                             <constraint firstAttribute="width" constant="48" id="Wwa-64-RCy"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWy-ep-G0u">
-                        <rect key="frame" x="63" y="14" width="198" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWy-ep-G0u">
+                        <rect key="frame" x="63" y="14.5" width="217" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="300" verticalHuggingPriority="251" horizontalCompressionResistancePriority="600" text="badge" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hLR-2D-leG">
-                        <rect key="frame" x="266" y="14" width="49" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qm8-zO-axO" customClass="BadgeView">
+                        <rect key="frame" x="285" y="9" width="30" height="30"/>
                         <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="qm8-zO-axO" secondAttribute="height" multiplier="1:1" id="FUy-93-qRm"/>
+                            <constraint firstAttribute="width" constant="30" id="uWE-UX-5ea"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="3"/>
+                            <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
-                    </label>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="kEO-O2-xdy" firstAttribute="leading" secondItem="BPh-TQ-57b" secondAttribute="trailing" id="0f5-dE-flM"/>
                     <constraint firstItem="IWy-ep-G0u" firstAttribute="leading" secondItem="kEO-O2-xdy" secondAttribute="trailing" constant="5" id="1zK-E5-f3j"/>
                     <constraint firstItem="BPh-TQ-57b" firstAttribute="leading" secondItem="2Bg-jC-e6c" secondAttribute="leading" id="68A-uT-TgV"/>
-                    <constraint firstAttribute="trailing" secondItem="hLR-2D-leG" secondAttribute="trailing" constant="5" id="Es8-KA-yyi"/>
+                    <constraint firstItem="qm8-zO-axO" firstAttribute="leading" secondItem="IWy-ep-G0u" secondAttribute="trailing" constant="5" id="GFL-3e-N9d"/>
                     <constraint firstAttribute="bottom" secondItem="kEO-O2-xdy" secondAttribute="bottom" id="HLN-6c-1Td"/>
                     <constraint firstItem="BPh-TQ-57b" firstAttribute="leading" secondItem="2Bg-jC-e6c" secondAttribute="leadingMargin" id="PKE-qE-LTW"/>
                     <constraint firstAttribute="bottomMargin" secondItem="BPh-TQ-57b" secondAttribute="bottom" id="Uym-fQ-Yyf"/>
                     <constraint firstItem="BPh-TQ-57b" firstAttribute="top" secondItem="2Bg-jC-e6c" secondAttribute="top" id="VUH-8M-J8Y"/>
-                    <constraint firstItem="IWy-ep-G0u" firstAttribute="centerY" secondItem="hLR-2D-leG" secondAttribute="centerY" id="Vex-Gq-ZzI"/>
-                    <constraint firstItem="hLR-2D-leG" firstAttribute="leading" secondItem="IWy-ep-G0u" secondAttribute="trailing" constant="5" id="YQD-A0-7VL"/>
+                    <constraint firstAttribute="centerY" secondItem="qm8-zO-axO" secondAttribute="centerY" id="chy-X8-xw9"/>
+                    <constraint firstAttribute="trailing" secondItem="qm8-zO-axO" secondAttribute="trailing" constant="5" id="nEN-BK-LKI"/>
                     <constraint firstItem="BPh-TQ-57b" firstAttribute="top" secondItem="2Bg-jC-e6c" secondAttribute="topMargin" id="nHG-ty-5Mm"/>
                     <constraint firstAttribute="bottom" secondItem="BPh-TQ-57b" secondAttribute="bottom" id="qLX-qN-hna"/>
                     <constraint firstAttribute="centerY" secondItem="IWy-ep-G0u" secondAttribute="centerY" id="vT0-vT-Ibz"/>
@@ -76,7 +78,7 @@
             </tableViewCellContentView>
             <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
-                <outlet property="badgeView" destination="hLR-2D-leG" id="Rbx-6W-Dkj"/>
+                <outlet property="badgeView" destination="qm8-zO-axO" id="St8-HW-iqP"/>
                 <outlet property="iconImageView" destination="kEO-O2-xdy" id="FnC-RZ-G6A"/>
                 <outlet property="selectionIndicatorView" destination="BPh-TQ-57b" id="ydh-aC-ySU"/>
                 <outlet property="titleLabel" destination="IWy-ep-G0u" id="K9w-uK-cy2"/>
