--- a/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
+++ b/PositionIn/Views/CommunityCells/PositionIn.CommunityHeaderCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -27,7 +28,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rt-Jw-7c4">
-                        <rect key="frame" x="138" y="90" width="44" height="21"/>
+                        <rect key="frame" x="18" y="90" width="284" height="21"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="OHW-bh-Swl"/>
@@ -48,10 +49,12 @@
                     <constraint firstAttribute="trailing" secondItem="fVh-Nj-957" secondAttribute="trailing" id="CYo-bX-8A8"/>
                     <constraint firstAttribute="bottom" secondItem="eCc-QS-ao5" secondAttribute="bottom" id="Rff-27-e1M"/>
                     <constraint firstAttribute="trailing" secondItem="eCc-QS-ao5" secondAttribute="trailing" id="SwY-o8-c1A"/>
+                    <constraint firstItem="2rt-Jw-7c4" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leadingMargin" constant="10" id="j29-Of-4Hm"/>
                     <constraint firstItem="2rt-Jw-7c4" firstAttribute="centerX" secondItem="fVh-Nj-957" secondAttribute="centerX" id="kt7-gw-MWl"/>
                     <constraint firstItem="eCc-QS-ao5" firstAttribute="top" secondItem="2NY-pq-cAG" secondAttribute="top" id="oce-W3-y5K"/>
                     <constraint firstAttribute="bottom" secondItem="fVh-Nj-957" secondAttribute="bottom" constant="-1" id="oj2-0A-gCO"/>
                     <constraint firstItem="eCc-QS-ao5" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leading" id="sgt-lo-xGj"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="2rt-Jw-7c4" secondAttribute="trailing" constant="10" id="yuX-gS-vv5"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
